--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <h1>The Solar System</h1>
+
+  <header>
+    <img src="images/logo.svg" alt="">
+    <h1>The Solar System</h1>
+
+  <nav>
+    <ul>
