Add "main" to index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,27 @@
     <img src="images/logo.svg" alt="">
     <h1>The Solar System</h1>
 
-  <nav>
-    <ul>
+    <nav>
+      <ul>
+        <li>Stars</li>
+        <li>Terrestrial planets</li>
+        <li>Gas giants</li>
+        <li>Dwarf planets</li>
+        <li>Asteroids</li>
+        <li>Comets</li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <figure>
+      <img src="images/banner.svg" alt="">
+      <figcaption>The Solar System - our home in the stars</figcaption>
+    </figure>
+  </main>
+
+  <footer>
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </footer>
+</body>
+</html>
